# powerbi-copilot-readiness

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml  readiness.yaml
.github/workflows/: ci.yml  copilot-readiness.yml
examples/: README.md  github-action.yml
src/copilot_readiness/: __init__.py  cli.py  config.py  gate.py  model.py  report.py  tmdl_parser.py
src/copilot_readiness/rules/: __init__.py  base.py  calculations.py  metadata.py  structure.py
tests/: conftest.py  test_cli_end_to_end.py  test_gate.py  test_join_depth.py  test_real_world.py  test_review_fixes.py  test_rules_metadata.py  test_rules_structure.py  test_tmdl_parser.py
tests/fixtures/: readiness.yaml
tests/fixtures/bad_snowflake.SemanticModel/definition/: relationships.tmdl
tests/fixtures/bad_snowflake.SemanticModel/definition/tables/: DimCategory.tmdl  DimCustomer.tmdl  DimDate.tmdl  DimProduct.tmdl  DimPromotion.tmdl  DimSubCategory.tmdl  f_sls_trx.tmdl
tests/fixtures/good_star.SemanticModel/definition/: model.tmdl  relationships.tmdl
tests/fixtures/good_star.SemanticModel/definition/tables/: Customer.tmdl  Date.tmdl  Geography.tmdl  Product.tmdl  Sales.tmdl
